Add index.html lessons.html and pagetwo.html

--- a/lessons.html
+++ b/lessons.html
@@ -2,7 +2,7 @@
 
 <html>
 <head>
-  <title> Webpage Making </title>
+  <title> Webpage Making 111 </title>
   <meta charset="utf-8">
 </head>
 
@@ -261,7 +261,7 @@
             <img src="img/hamster.png" alt="cute hamster
               cartoon that is standing up. it is partly orange and has pink cheek blush.">
 
-        <p>The first one is an image that has an absolute link. The second one, which is a 
+        <p>The first one is an image that has an absolute link. The second one, which is a
           hamster, is an example of a relative link.</p>
 
 
